--- a/SalesCurso/appsettings.json
+++ b/SalesCurso/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesCursoContext": "Server=(localdb)\\mssqllocaldb;Database=SalesCursoContext-f8734e30-591c-41f4-b1a5-a6e6b84fd071;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
